ci: fix Vercel deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "installCommand": "npm install --legacy-peer-deps",
-  "outputDirectory": "build",
+  "outputDirectory": "docs/build",
   "framework": null,
   "rewrites": [
     {
