--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,9 +12,8 @@ on:
       - 'docs/**'
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,26 +25,15 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm ci -w docs
+        run: npm ci -w docs
 
       - name: Build documentation
-        run: |
-          npm run build
+        run: npm run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs/build
+      - name: Install Vercel CLI
+        run: npm install -g vercel
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Deploy to Vercel
+        if: github.ref == 'refs/heads/main'
+        run: vercel deploy --prebuilt --prod --token ${{ secrets.VERCEL_TOKEN }}
+        working-directory: ./docs
