ci: fix Vercel's deploy one more time

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -25,13 +25,14 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci -w docs
-
-      - name: Build documentation
-        run: npm run build
+        run: npm ci
 
       - name: Install Vercel CLI
         run: npm install -g vercel
+
+      - name: Build Project
+        run: vercel build --token ${{ secrets.VERCEL_TOKEN }}
+        working-directory: ./docs
 
       - name: Deploy to Vercel
         if: github.ref == 'refs/heads/main'
