--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -30,6 +30,10 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
+      - name: Pull Vercel Project Settings
+        run: vercel pull --yes --token ${{ secrets.VERCEL_TOKEN }}
+        working-directory: ./docs
+
       - name: Build Project
         run: vercel build --token ${{ secrets.VERCEL_TOKEN }}
         working-directory: ./docs
