build cat overview grids automatically

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "node scripts/generate-category-data.js && docusaurus start",
+    "build": "node scripts/generate-category-data.js && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "generate-categories": "node scripts/generate-category-data.js"
   },
   "dependencies": {
     "@docsearch/react": "^3.9.0",
